# ticktick-mcp

./: .gitignore  README.md  build.js  package-lock.json  package.json  pyproject.toml
.github/workflows/: build.yml
docs/: index.html
docs/simple/ticktick-mcp/: index.html
src/: auth.js  index.js  ticktick-client.js
src/ticktick_mcp/: __init__.py  __main__.py  auth.py  client.py  prepare.py  registry.py  server.py  server_compact.py  tools.py
tests/: test_brief.py  test_compact.py  test_validation.py
