[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ticktick-mcp"
version = "1.0.8"
description = "MCP server for TickTick task manager"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = ["mcp>=1.0.0"]
keywords = ["mcp", "ticktick", "tasks", "model-context-protocol", "claude", "ai"]

[project.scripts]
ticktick-mcp = "ticktick_mcp:main"

[project.urls]
Homepage = "https://github.com/nikitatsym/ticktick-mcp"
Repository = "https://github.com/nikitatsym/ticktick-mcp"
